Fix modal positioning on small screens
Counter Nycto/PicoModal@e435d26.

--- a/src/css/picomodal-overrides.styl
+++ b/src/css/picomodal-overrides.styl
@@ -7,6 +7,7 @@
 	@media (max-width 767px)
 		width 100% !important
 		height 100% !important
+		transform none !important
 		top 0 !important
 		left 0 !important
 		margin 0 !important
